@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-22T08:32:28Z",
-  "count_outdated" : 199,
-  "uniques_outdated" : 91,
-  "count" : 223,
+  "timestamp" : "2022-06-23T02:06:13Z",
+  "count_outdated" : 201,
+  "uniques_outdated" : 92,
+  "count" : 224,
   "uniques" : 107,
   "clones" : [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 1,
